<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Title String -->
    <string name="app_name">SilverWalk</string>
    <string name="title_mission">Mission</string>
    <string name="title_achievement">Achievement</string>
    <string name="title_neighborhood">Neighborhood</string>
    <string name="title_information">Information</string>

    <!-- Comman String -->
    <string name="AM">AM</string>
    <string name="PM">PM</string>
    <string name="Temperature">Temperature</string>
    <string name="Min">Min</string>
    <string name="Mile">Mile</string>
    <string name="Kcal">Kcal</string>
    <string name="Mph">Mph</string>
    <string name="Map">Map</string>
    <string name="Camera">Camera</string>
    <string name="Distance">DISTANCE</string>
    <string name="Calories">BURN CALORIES</string>
    <string name="Time">TIME</string>
    <string name="AveragePace">AVERAGE PACE</string>
    <string name="Steps">STEPS</string>
    <string name="StepsCount">Steps</string>
    <string name="HeartRate">HEART RATE</string>
    <string name="BPM">BPM</string>
    <string name="Today">Today</string>
    <string name="Weekly">Weekly</string>
    <string name="Monthly">Monthly</string>
    <string name="Yearly">Yearly</string>
    <string name="Easy">Easy</string>
    <string name="Moderate">Moderate</string>
    <string name="Hard">Hard</string>
    <string name="Men">Men</string>
    <string name="Women">Women</string>
    <string name="s50">50s</string>
    <string name="s60">60s</string>
    <string name="s70">70s</string>
    <string name="Sir">Sir</string>
    <string name="Badge">Badge</string>
    <string name="Wait">Wait a second...</string>
    <string name="Top">TOP</string>

    <!-- Mission Fragment String -->
    <string name="mission_display_1">How about (%type) for (%time) min At (%location)?</string>
    <string name="mission_easy">Easy</string>
    <string name="mission_normal">Normal</string>
    <string name="mission_hard">Hard</string>
    <string name="mission_start">Start</string>

    <!-- Weather String -->
    <string name="weather_1">It’s freezing! It’s safe to stay at home and do some in-door workout instead</string>
    <string name="weather_2">It’s cold outside. Warm up warm as much as you could.</string>
    <string name="weather_3">It’s cold outside. You’ll need to wear a thick coat. </string>
    <string name="weather_4">You could wear a slightly less heavy sweater. </string>
    <string name="weather_5">Let go of heavy outers. Spring has come!</string>
    <string name="weather_6">Wear something that keeps you fresh. </string>
    <string name="weather_7">It’s hot. Keep yourself cool with airy clothing and stay hydrated enough.</string>
    <string name="weather_8">It’s too hot! It’s safe to stay at home and do some in-door workout instead.</string>

    <!-- Achievement Fragment String -->
    <string name="achievement_display_1">Achievement</string>
    <string name="achievement_display_2">History</string>

    <!-- Mission Start Dialog String -->
    <string name="start_display_1">Did you stretch first?</string>
    <string name="start_display_2">Take another layer,</string>
    <string name="start_display_3">Its cold outside!</string>
    <string name="start_ok">Yes, I did.</string>

    <!-- Map Activity String -->
    <string name="title_activity_maps">Map</string>

    <!-- Mission Activity String -->
    <string name="mission_activity_display_1">Beginning</string>
    <string name="mission_activity_display_2">the first mission!</string>

    <!-- History Activity String -->
    <string name="history_activity_main_title">History</string>
    <string name="history_activity_title_1">(%location) Walk</string>
    <string name="history_activity_title_2">Intensity Level</string>
    <string name="history_activity_title_3">Gender</string>
    <string name="history_activity_title_4">Age Range</string>
    <string name="history_activity_display_1">(%count) people </string>
    <string name="history_activity_display_2">also completed</string>
    <string name="history_activity_display_3">this mission</string>
    <string name="history_activity_display_4">in (%location)</string>
    <string name="history_activity_display_5">Meantime</string>

    <!-- Information Activity String -->
    <string name="information_activity_badge_1_text_1">Neighborhood</string>
    <string name="information_activity_badge_1_text_2">Best Walker</string>
    <string name="information_activity_badge_2_text_1">Hero of</string>
    <string name="information_activity_badge_2_text_2">Neighborhood</string>
    <string name="information_activity_badge_3_text_1">Persistency</string>
    <string name="information_activity_badge_3_text_2">Hero</string>
    <string name="information_activity_badge_4_text_1">Excelient</string>
    <string name="information_activity_badge_4_text_2">Posture</string>
    <string name="information_activity_badge_5_text_1">Regular</string>
    <string name="information_activity_badge_5_text_2">Routines</string>
    <string name="information_activity_badge_6_text_1">Photographer</string>
    <string name="information_activity_badge_6_text_2"> </string>
    <string name="information_activity_badge_7_text_1">Sharing</string>
    <string name="information_activity_badge_7_text_2">Hero</string>
    <string name="information_activity_badge_8_text_1">100 Missions</string>
    <string name="information_activity_badge_8_text_2">Completed</string>

    <!-- Finish Mission Activity String -->
    <string name="finish_mission_activity_display_1_text">How hard was it?</string>
    <string name="finish_mission_activity_button_1_text">Share your route</string>
    <string name="finish_mission_activity_button_2_text">End the mission</string>

    <!-- Share Activity String -->
    <string name="share_activity_display_1">Share your route</string>
    <string name="share_activity_display_2">with neighbors</string>
    <string name="share_activity_title_1">Post</string>
    <string name="share_activity_title_2">Route of The Day</string>
    <string name="share_activity_title_3">My Photos</string>
    <string name="share_activity_button_1">Cancel</string>
    <string name="share_activity_button_2">Upload</string>
    <string name="share_activity_edit_label">Please write a caption.</string>

    <!-- Cancle Dialog String -->
    <string name="cancle_dialog_display_1">Are you sure</string>
    <string name="cancle_dialog_display_2">you want to quit?</string>
    <string name="cancle_dialog_button_1">Yes, I want to quit</string>
    <string name="cancle_dialog_button_2">No, resume the mission.</string>

</resources>