<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_mission"
        android:icon="@drawable/ic_baseline_flag_24"
        android:title="@string/title_mission" />

    <item
        android:id="@+id/navigation_achievement"
        android:icon="@drawable/ic_baseline_insert_chart_outlined_24"
        android:title="@string/title_achievement" />

    <item
        android:id="@+id/navigation_neighborhood"
        android:icon="@drawable/ic_baseline_comment_24"
        android:title="@string/title_neighborhood" />

    <item
        android:id="@+id/navigation_information"
        android:icon="@drawable/ic_baseline_insert_emoticon_24"
        android:title="@string/title_information" />

</menu>