<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_mission">

    <fragment
        android:id="@+id/navigation_mission"
        android:name="com.gsc.silverwalk.ui.mission.MissionFragment"
        android:label="@string/title_mission"
        tools:layout="@layout/fragment_achievement" />

    <fragment
        android:id="@+id/navigation_achievement"
        android:name="com.gsc.silverwalk.ui.achievement.AchievementFragment"
        android:label="@string/title_achievement"
        tools:layout="@layout/fragment_mission" />

    <fragment
        android:id="@+id/navigation_neighborhood"
        android:name="com.gsc.silverwalk.ui.neighborhood.NeighborhoodFragment"
        android:label="@string/title_neighborhood"
        tools:layout="@layout/fragment_neighborhood" />

    <fragment
        android:id="@+id/navigation_information"
        android:name="com.gsc.silverwalk.ui.information.InformationFragment"
        android:label="@string/title_information"
        tools:layout="@layout/fragment_information" />

</navigation>