<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/achievement_root_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?attr/actionBarSize"
    tools:context=".ui.achievement.AchievementFragment">

    <LinearLayout
        android:id="@+id/achievement_root_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/achievement_display_1_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/noto_sans"
            android:text="@string/achievement_display_1"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/achievement_tablayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/achievement_today_tabitem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Today" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/achievement_weekly_tabitem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Weekly" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/achievement_monthly_tabitem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Monthly" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/achievement_yearly_tabitem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Yearly" />
        </com.google.android.material.tabs.TabLayout>

        <FrameLayout
            android:id="@+id/achievement_tab_framelayout"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <LinearLayout
                android:id="@+id/achievement_today_linearlayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:visibility="visible">

                <LinearLayout
                    android:id="@+id/achievement_today_div1_linearlayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/achievement_steps_info_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/noto_sans"
                        android:text="@string/Steps" />

                    <TextView
                        android:id="@+id/achievement_steps_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/noto_sans"
                        android:text="@string/StepsCount"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/achievement_averagepace_info_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/noto_sans"
                        android:text="@string/AveragePace" />

                    <TextView
                        android:id="@+id/achievement_averagepace_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/noto_sans"
                        android:text="@string/Mph"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/achievement_calories_info_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/noto_sans"
                        android:text="@string/Calories" />

                    <TextView
                        android:id="@+id/achievement_calories_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/noto_sans"
                        android:text="@string/Kcal"
                        android:textColor="@color/black"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/achievement_today_div2_linearlayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/achievement_heartrate_info_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/noto_sans"
                        android:text="@string/HeartRate" />

                    <TextView
                        android:id="@+id/achievement_heartrate_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/noto_sans"
                        android:text="@string/BPM"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/achievement_distance_info_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/noto_sans"
                        android:text="@string/Distance" />

                    <TextView
                        android:id="@+id/achievement_distance_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/noto_sans"
                        android:text="@string/Mile"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/achievement_time_info_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/noto_sans"
                        android:text="@string/Time" />

                    <TextView
                        android:id="@+id/achievement_time_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/noto_sans"
                        android:text="00:00"
                        android:textColor="@color/black"
                        android:textSize="24sp" />
                </LinearLayout>
            </LinearLayout>

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/history_statistics_chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/achievement_monthly_chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/achievement_yearly_chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible" />

        </FrameLayout>

        <TextView
            android:id="@+id/achievement_display_2_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/noto_sans"
            android:text="@string/achievement_display_2"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/achievement_history_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

        </LinearLayout>

    </LinearLayout>

</ScrollView>