<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mission_cancle_dialog_root_linearlayout"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:background="@drawable/mydialog"
    android:orientation="vertical">


    <TextView
        android:id="@+id/mission_cancle_dialog_display_1_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:gravity="center"
        android:text="@string/cancle_dialog_display_1"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/mission_cancle_dialog_display_2_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:gravity="center"
        android:text="@string/cancle_dialog_display_2"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/mission_cancle_dialog_cancle_button"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_primary_button"
        android:text="@string/cancle_dialog_button_2"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/mission_cancle_dialog_resume_button"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_primary_second_button"
        android:text="@string/cancle_dialog_button_1"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="24sp" />

</LinearLayout>