<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_start_root_linearlayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/mydialog"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/dialog_start_info_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/dialog_start_time_linearlayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dialog_start_timediv_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/AM"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/dialog_start_time_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="00:00"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialog_start_weather_linearlayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dialog_start_temperature_info_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Temperature"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/dialog_start_temperature_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0F"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/dialog_start_display_1_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/start_display_1"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialog_start_display_2_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/start_display_2"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialog_start_display_3_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/start_display_3"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/dialog_start_ok_button"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="72dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/mybutton"
        android:text="@string/start_ok"
        android:textColor="@color/white"
        android:textSize="24sp" />
</LinearLayout>