<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/share_activity_root_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="730dp"
            app:srcCompat="@drawable/gradient_background" />

        <LinearLayout
            android:id="@+id/share_activity_root_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            tools:context=".ui.share.ShareActivity">

            <TextView
                android:id="@+id/share_activity_display_1_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/roboto"
                android:text="@string/share_activity_display_1"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/share_activity_display_2_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/share_activity_display_2"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/share_activity_title_1_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:fontFamily="@font/roboto"
                android:text="@string/share_activity_title_1"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/share_activity_edittext"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/myedittext"
                android:fontFamily="@font/roboto"
                android:gravity="start"
                android:hint="@string/share_activity_edit_label"
                android:inputType="textMultiLine|textPersonName"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:textColor="#999999"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/share_activity_title_2_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:fontFamily="@font/roboto"
                android:text="@string/share_activity_title_2"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="8dp">

                <com.google.android.gms.maps.MapView
                    android:id="@+id/mapView"
                    android:layout_width="match_parent"
                    android:layout_height="400dp" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/share_activity_title_3_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:fontFamily="@font/roboto"
                android:text="@string/share_activity_title_3"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <GridLayout
                android:id="@+id/share_activity_photos_gridlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:columnCount="3"
                android:useDefaultMargins="true" />

            <LinearLayout
                android:id="@+id/share_activity_button_linearlayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/share_activity_cancel_button"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginBottom="32dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_primary_second_button"
                    android:fontFamily="@font/roboto"
                    android:text="@string/share_activity_button_1"
                    android:textAllCaps="false"
                    android:textColor="@color/black_text"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/share_activity_done_button"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginBottom="32dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_primary_button"
                    android:fontFamily="@font/roboto"
                    android:text="@string/share_activity_button_2"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</ScrollView>